--- a/src/App.css
+++ b/src/App.css
@@ -1,35 +1,13 @@
 ul li {
-  list-style-type: georgian;
+    list-style-type: georgian;
 }
 
 .app-wrapper {
-  width: 1200px;
-  margin: 0 auto;
-  display: grid;
-  grid-template-areas:
-    "h h"
-    "n c";
-  grid-template-rows: 60px 1fr;
-  grid-template-columns: 2fr 10fr;
-  grid-gap: 10px;
-}
-
-.header {
-  grid-area: h;
-  background-color: lightgreen;
-}
-
-.header img {
-  height: 50px;
-  margin: 4px;
-}
-
-.nav {
-  grid-area: n;
-  background-color: lightgrey;
-}
-
-.content {
-  grid-area: c;
-  background-color: lightcyan
+    width: 1200px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-areas: "h h" "n c";
+    grid-template-rows: 60px 1fr;
+    grid-template-columns: 2fr 10fr;
+    grid-gap: 10px;
 }
