--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,8 @@ ul li {
     grid-template-columns: 2fr 10fr;
     grid-gap: 10px;
 }
+
+.app-wrapper-content {
+    grid-area: c;
+    background-color: lightcyan;
+}
